<resources>
    <string name="app_name">CaptureImages</string>
    <string name="sign_up">Register</string>
    <string name="dotHaveAccount">Dont have account</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_weak_password"> Too weak password</string>
    <string name="error_invalid_email">Wrong email</string>
    <string name="error_user_exists">User does not exists</string>
    <string name="error_empty_field">Cannot be empty</string>
    <string name="label_email">Email</string>
    <string name="label_passw">Password</string>
    <string name="label_confirm_passw">Confirm?</string>
    <string name="registerBtnText">Register</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>
