<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gints.captureimages.RegisterActivity">

    <EditText
        android:id="@+id/emailTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="213dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:hint="@string/label_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordTextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/label_passw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_paswrd_TextBox"
        app:layout_constraintStart_toStartOf="@+id/emailTextBox"
        app:layout_constraintTop_toBottomOf="@+id/emailTextBox" />

    <EditText
        android:id="@+id/confirm_paswrd_TextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="61dp"
        android:ems="10"
        android:hint="@string/label_confirm_passw"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintStart_toStartOf="@+id/passwordTextBox"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBox" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="139dp"
        android:layout_height="67dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="207dp"
        android:text="@string/registerBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_paswrd_TextBox" />

</androidx.constraintlayout.widget.ConstraintLayout>
