<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name=".ui.login_"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.gints.captureimages.loginActivity">

    <EditText
        android:id="@+id/passwlEditText"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textWebPassword"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="296dp"
        android:layout_height="56dp"
        android:layout_marginBottom="66dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/registerBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="82dp"
        android:layout_height="36dp"
        android:layout_marginBottom="20dp"
        android:text="@string/action_sign_in_short"
        app:layout_constraintBottom_toTopOf="@+id/DontHaveAccount"
        app:layout_constraintStart_toEndOf="@+id/DontHaveAccount" />

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        android:src="@drawable/register_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/DontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="13dp"
        android:text="@string/dotHaveAccount"
        app:layout_constraintBaseline_toBaselineOf="@+id/sign_up"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="27dp"
        android:backgroundTint="#00BCD4"
        android:text="@string/sign_up"
        android:textColorLink="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/DontHaveAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>
